src/app/hero-detail/hero-detail.component.scss
/* HeroDetailComponent's private CSS styles */
label {
    display: inline-block;
    width: 3em;
    margin: 0.5em 0;
    color: #607d8b;
    font-weight: bold;
}
input {
    height: 2em;
    font-size: 1em;
    padding-left: 0.4em;
}
button {
    margin-top: 20px;
    font-family: Arial;
    background-color: #eee;
    border: none;
    padding: 5px 10px;
    border-radius: 4px;
    cursor: pointer;
    cursor: hand;
}
button:hover {
    background-color: #cfd8dc;
}
button:disabled {
    background-color: #eee;
    color: #ccc;
    cursor: auto;
}

